# typstyle

./: Cargo.toml
crates/typstyle-consistency/: Cargo.toml
crates/typstyle-core/src/pretty/: mod.rs
src/pretty/: mod.rs
