[workspace]
resolver = "2"
members = ["crates/*", "tests"]
default-members = ["crates/typstyle"]

[workspace.package]
version = "0.12.14"
rust-version = "1.80"
edition = "2021"
authors = ["Wenzhuo Liu"]
description = "Beautiful and reliable typst code formatter"
license = "Apache-2.0"
repository = "https://github.com/Enter-tainer/typstyle"
homepage = "https://enter-tainer.github.io/typstyle/"

[workspace.dependencies]
typstyle-core = { path = "crates/typstyle-core", version = "0.12.14" }
typstyle = { path = "crates/typstyle", version = "0.12.14" }
typstyle-consistency = { path = "crates/typstyle-consistency" }

# Used in core
typst-syntax = { git = "https://github.com/paran3xus/typst.git", tag = "tinymist-nightly-v0.12.19" }

ecow = "0.2.3"
itertools = "0.13.0"
pretty = "0.12.3"
rustc-hash = "2.0"
serde = "1.0"
wasm-bindgen = { version = "0.2" }

# Use in CLI
anyhow = "1"
clap = { version = "4.5.20", features = ["derive", "env"] }
clap_complete = { version = "4.5.36" }
walkdir = { version = "2" }

log = "0.4"
anstream = "0.6"
colored = "2.2"

# Used in tests
insta = { version = "1.41.1" }
insta-cmd = "0.6"
libtest-mimic = "0.8.1"
pretty_assertions = "1.4.1"
tempfile = "3"

reflexo-world = { git = "https://github.com/paran3xus/typst.ts/", tag = "tinymist-nightly-v0.12.19", default-features = false, features = [
  "system",
] }
reflexo-typst = { git = "https://github.com/paran3xus/typst.ts/", tag = "tinymist-nightly-v0.12.19", default-features = false, features = [
  "system",
  "no-content-hint",
] }

typst-assets = { version = "0.12.0", features = ["fonts"] }
typst-render = { git = "https://github.com/paran3xus/typst.git", tag = "tinymist-nightly-v0.12.19" }
typst-eval = { git = "https://github.com/paran3xus/typst.git", tag = "tinymist-nightly-v0.12.19" }
typst-pdf = { git = "https://github.com/paran3xus/typst.git", tag = "tinymist-nightly-v0.12.19" }
typst = { git = "https://github.com/paran3xus/typst.git", tag = "tinymist-nightly-v0.12.19" }


# Used in benchmark
criterion = { version = "0.5" }

# Build
vergen = { version = "9.0", features = ["build", "cargo", "rustc"] }
vergen-gitcl = { version = "1.0" }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.test]
opt-level = 3

[profile.ci]
inherits = "release"
debug = true
